9.7.0.1 config files using alpine base