@@ -1,22 +1,7 @@
-FROM harbor.usu.edu/banner/base-bannerselfservice:oraclelinux6-tomcat8-java8
-MAINTAINER "Eric Allen <eric.allen@usu.edu>"
+FROM edurepo/banner9-selfservice:tomcat8-jre8-alpine
+LABEL MAINTAINER="Eric Allen <eric.allen@usu.edu>"
 
-ENV JAVA_OPTS -Duser.timezone=\$TIMEZONE \
-    -Xms\$XMS -Xmx\$XMX \
-    -XX:MaxPermSize=\$MAXPERMSIZE -Dbanproxy.jdbc.url=\$BANPROXY_JDBC_URL \
-    -Dbanproxy.password=\$BANPROXY_PASSWORD \
-    -Dbanproxy.initialsize=\$BANPROXY_INITIALSIZE \
-    -Dbanproxy.maxactive=\$BANPROXY_MAXACTIVE \
-    -Dbanproxy.maxidle=\$BANPROXY_MAXIDLE \
-    -Dbanproxy.maxwait=\$BANPROXY_MAXWAIT \
-    -Dbanssuser.jdbc.url=\$BANSSUSER_JDBC_URL \
-    -Dbanssuser.password=\$BANSSUSER_PASSWORD \
-    -Dbanssuser.initialsize=\$BANSSUSER_INITIALSIZE \
-    -Dbanssuser.maxactive=\$BANSSUSER_MAXACTIVE \
-    -Dbanssuser.maxidle=\$BANSSUSER_MAXIDLE \
-    -Dbanssuser.maxwait=\$BANSSUSER_MAXACTIVE \
-    -Dcas.serverurlprefix=\$GRAILS_PLUGIN_SPRINGSECURITY_CAS_SERVERURLPREFIX \
-    -Dserver.name=\$GRAILS_PLUGIN_SPRINGSECURITY_CAS_SERVERNAME
-ENV CATALINA_HOME /usr/local/tomcat
+ENV TIMEZONE=America/Denver \
+    BANNER_ANALYSTICS_ALLOWELLUCIANTRACKER=false
 
-COPY StudentSelfService.war /usr/local/tomcat/webapps/StudentSelfService.war
+COPY --chown=tomcat:tomcat StudentSelfService /usr/local/tomcat/webapps/StudentSelfService
